# CryptiQ-VPN

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
edge/: Cargo.toml  Dockerfile  README.md
edge/deploy/: cryptiq-edge.service  cryptiq-wg-sync  cryptiq-wg-sync.service  cryptiq-wg-sync.timer
edge/src/: main.rs
scripts/: make_icon.py
src/: App.tsx  Lattice.tsx  Technical.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: live_edge.rs  scan_and_migrate.rs
src-tauri/icons/: icon.icns
src-tauri/resources/wireguard/: THIRD_PARTY_NOTICES.md  bash  wg
src-tauri/resources/wireguard/lib/: libhistory.8.dylib  libintl.8.dylib  libncursesw.6.dylib  libreadline.8.dylib
src-tauri/src/: lib.rs  main.rs  migrate.rs  pqc.rs  scanner.rs  store.rs  tunnel.rs
src-tauri/tests/: backend.rs
website/: download.html
