[package]
name = "cryptiq-edge"
version = "0.6.0"
edition = "2021"
description = "Local CryptiQ edge peer — hybrid PQ handshake + WireGuard peer registry"

[[bin]]
name = "cryptiq-edge"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ml-kem = "0.2"
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
