[package]
name = "cryptiq-personal"
version = "0.7.0"
description = "CryptiQ Personal — quantum-safe protection for your laptop"
edition = "2021"

[lib]
name = "cryptiq_personal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ml-kem = "0.2"
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets"] }
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
